k8s/monitoring/alertmanager-service.yml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: ge65poj
  labels:
    app: alertmanager
spec:
  selector:
    app: alertmanager
  ports:
    - port: 9093
      targetPort: 9093
