k8s/monitoring/loki-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: ge65poj
  labels:
    app: loki
spec:
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
