k8s/monitoring/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: ge65poj
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
